...
                    onClick = {
                        navController.navigate(Screen.SignIn.route) {
                            popUpTo(Screen.Onboarding.route) { inclusive = true }
                        }
                    }
                ) {
                    Text(text = "Пропустить")
                }

                Button(
                    onClick = {
                        if (pagerState.currentPage == items.lastIndex) {
                            navController.navigate(Screen.SignIn.route) {
...
